WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
297459
Errno is not cleared prior to checking it
https://bugs.webkit.org/show_bug.cgi?id=297459
Summary
Errno is not cleared prior to checking it
Mike Wyrzykowski
Reported
2025-08-15 08:59:12 PDT
Errno is not cleared prior to checking it
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-08-15 08:59:27 PDT
<
rdar://problem/158410814
>
Mike Wyrzykowski
Comment 2
2025-08-15 09:02:37 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/49456
EWS
Comment 3
2025-08-15 09:23:50 PDT
Committed
298754@main
(7ebe4087b997): <
https://commits.webkit.org/298754@main
> Reviewed commits have been landed. Closing PR #49456 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug