Errno is not cleared prior to checking it https://bugs.webkit.org/show_bug.cgi?id=297459 rdar://158410814

Reviewed by Mark Lam.

errno, a thread local variable, can be set by other POSIX
functions prior to calling stringToDouble resulting in
stringToDouble failing when the input passed to it was
within a valid range.

Test: no failures as observed in https://github.com/WebKit/WebKit/pull/48706

* Source/WTF/wtf/StdLibExtras.h:
(WTF::stringToDouble):

Canonical link: https://commits.webkit.org/298754@main